# docs/swagger.json
@@ -17,27 +17,26 @@
     },
     "basePath": "/",
     "paths": {
-        "/auth/user": {
+        "/": {
             "get": {
-                "security": [
-                    {
-                        "": []
-                    }
+                "consumes": [
+                    "application/json"
                 ],
-                "description": "auth handler",
                 "produces": [
                     "application/json",
                     "application/json"
                 ],
                 "tags": [
-                    "User"
+                    "Welcome"
                 ],
-                "summary": "auth handler",
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/main.User"
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
                         }
                     },
                     "400": {
@@ -65,6 +64,41 @@
                 "responses": {
                     "200": {
                         "description": "OK",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/user": {
+            "get": {
+                "security": [
+                    {
+                        "": []
+                    }
+                ],
+                "description": "auth handler",
+                "produces": [
+                    "application/json",
+                    "application/json"
+                ],
+                "tags": [
+                    "User"
+                ],
+                "summary": "auth handler",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/main.User"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
                         "schema": {
                             "type": "object",
                             "additionalProperties": {
