# routes.go
@@ -9,15 +9,17 @@ import (
 )
 
 func (s *Server) Routes(r *gin.Engine) {
+	r.GET("/info", s.Info)
 	r.LoadHTMLGlob("templates/*")
 	r.GET("/oauth2-redirect.html", s.Oauth2RedirectUri)
-	r.GET("/info", s.Info)
-	url := ginSwagger.URL("http://localhost:8088/swagger/doc.json")
+	r.GET("/logout", s.Logout)
+
+	url := ginSwagger.URL("/swagger/doc.json")
 	r.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler, url))
 
-	authUser := r.Group("/auth")
+	protected := r.Group("/").Use(s.AuthMiddleware())
 	{
-		authUser.Use(s.AuthMiddleware())
-		authUser.GET("/user", s.AuthWelcome)
+		protected.GET("/", s.Welcome)
+		protected.GET("/user", s.AuthWelcome)
 	}
 }
